Add view-invoice page with dynamic invoice details and styling

--- a/frontend/views/clientInfo.ejs
+++ b/frontend/views/clientInfo.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <!--begin::Head-->
 <%- include('partials/mainHead')%>
-<script type="module" src="/assets/js/clientInfo.js"></script>
+  <script type="module" src="/assets/js/clientInfo.js"></script>
 
   <!--end::Head-->
   <!--begin::Body-->
@@ -29,7 +29,7 @@
               </div>
               <!--begin::Logo image-->
               <a href="index.html">
-                <img alt="Logo" src="assets/media/logos/demo42-small.svg" class="h-30px" />
+                <img alt="Logo" src="assets/media/images/ScribeBill(5).png" class="h-30px" />
               </a>
               <!--end::Logo image-->
             </div>
@@ -85,7 +85,8 @@
                       <!--begin::Actions-->
                       <div class="d-flex align-items-center gap-2 gap-lg-3">
 
-                        <a href="/clients/create" class="btn btn-flex btn-primary h-40px fs-7 fw-bold"><i class="las la-plus-circle fs-1"></i>Actions</a>
+                        <a href="/clients/create" class="btn btn-flex btn-primary h-40px fs-7 fw-bold"><i
+                            class="las la-plus-circle fs-1"></i>Actions</a>
                       </div>
                       <!--end::Actions-->
                     </div>
@@ -117,7 +118,8 @@
                           </section>
                           <section class="my-4">
                             <div class="text-muted">Email</div>
-                            <div class="fs-6"><i class="las la-envelope fs-1"></i> <span id="client-email">...</span></div>
+                            <div class="fs-6"><i class="las la-envelope fs-1"></i> <span id="client-email">...</span>
+                            </div>
                           </section>
                           <section class="my-4">
                             <div class="text-muted">Phone</div>
@@ -189,7 +191,8 @@
                                 Invoice</a>
                             </div>
                             <div class="table-responsive">
-                              <table id="clientInvoicesTable" class="table table-hover table-rounded table-striped border gy-7 gs-7">
+                              <table id="clientInvoicesTable"
+                                class="table table-hover table-rounded table-striped border gy-7 gs-7">
                                 <thead>
                                   <tr class="fw-semibold fs-6 text-gray-800 border-bottom-2 border-gray-200">
                                     <th>Invoice #</th>
@@ -214,7 +217,8 @@
 
                               <section class="my-4">
                                 <div class="d-flex align-items-start gap-3">
-                                  <span class="border border-5 border-secondary bg-secondary rounded-circle"><i class="fs-1 las la-envelope"></i></span>
+                                  <span class="border border-5 border-secondary bg-secondary rounded-circle"><i
+                                      class="fs-1 las la-envelope"></i></span>
                                   <div>
                                     <div class="fw-bold">Invoice Sent</div>
                                     <div class="text-muted">Invoice #INV-029 sent to client</div>
@@ -225,7 +229,8 @@
 
                               <section class="my-4">
                                 <div class="d-flex align-items-start gap-3">
-                                  <span class="border border-5 border-secondary bg-secondary rounded-circle"><i class="fs-1 las la-envelope"></i></span>
+                                  <span class="border border-5 border-secondary bg-secondary rounded-circle"><i
+                                      class="fs-1 las la-envelope"></i></span>
                                   <div>
                                     <div class="fw-bold">Invoice Sent</div>
                                     <div class="text-muted">Invoice #INV-029 sent to client</div>
@@ -236,7 +241,8 @@
 
                               <section class="my-4">
                                 <div class="d-flex align-items-start gap-3">
-                                  <span class="border border-5 border-secondary bg-secondary rounded-cirlce"><i class="fs-1 las la-envelope"></i></span>
+                                  <span class="border border-5 border-secondary bg-secondary rounded-cirlce"><i
+                                      class="fs-1 las la-envelope"></i></span>
                                   <div>
                                     <div class="fw-bold">Invoice Sent</div>
                                     <div class="text-muted">Invoice #INV-029 sent to client</div>
@@ -247,7 +253,8 @@
 
                               <section class="my-4">
                                 <div class="d-flex align-items-start gap-3">
-                                  <span class="border border-5 border-secondary bg-secondary rounded-circle"><i class="fs-1 las la-envelope"></i></span>
+                                  <span class="border border-5 border-secondary bg-secondary rounded-circle"><i
+                                      class="fs-1 las la-envelope"></i></span>
                                   <div>
                                     <div class="fw-bold">Invoice Sent</div>
                                     <div class="text-muted">Invoice #INV-029 sent to client</div>
@@ -285,9 +292,9 @@
     <!--end::Scrolltop-->
 
     <!--begin::Javascript-->
-          <%- include('partials/toast') %>
-            <%- include('partials/mainScript') %>
-      <!--end::Javascript-->
+    <%- include('partials/toast') %>
+      <%- include('partials/mainScript') %>
+        <!--end::Javascript-->
   </body>
   <!--end::Body-->
 
