--- a/frontend/views/clients.ejs
+++ b/frontend/views/clients.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <!--begin::Head-->
 <%- include('partials/mainHead')%>
-<script type="module" src="/assets/js/clients.js"></script>
+  <script type="module" src="/assets/js/clients.js"></script>
 
   <!--end::Head-->
   <!--begin::Body-->
@@ -29,7 +29,7 @@
               </div>
               <!--begin::Logo image-->
               <a href="index.html">
-                <img alt="Logo" src="assets/media/logos/demo42-small.svg" class="h-30px" />
+                <img alt="Logo" src="assets/media/images/ScribeBill(5).png" class="h-30px" />
               </a>
               <!--end::Logo image-->
             </div>
@@ -85,7 +85,8 @@
                       <!--begin::Actions-->
                       <div class="d-flex align-items-center gap-2 gap-lg-3">
 
-                        <a href="/clients/create" class="btn btn-flex btn-primary h-40px fs-7 fw-bold"><i class="las la-plus-circle fs-1"></i>Add Client</a>
+                        <a href="/clients/create" class="btn btn-flex btn-primary h-40px fs-7 fw-bold"><i
+                            class="las la-plus-circle fs-1"></i>Add Client</a>
                       </div>
                       <!--end::Actions-->
                     </div>
@@ -141,8 +142,8 @@
 
     <!--begin::Javascript-->
     <%- include('partials/toast') %>
-    <%- include('partials/mainScript') %>
-      <!--end::Javascript-->
+      <%- include('partials/mainScript') %>
+        <!--end::Javascript-->
   </body>
   <!--end::Body-->
 
