--- a/frontend/views/createInvoice.ejs
+++ b/frontend/views/createInvoice.ejs
@@ -30,7 +30,7 @@
               </div>
               <!--begin::Logo image-->
               <a href="index.html">
-                <img alt="Logo" src="assets/media/logos/demo42-small.svg" class="h-30px" />
+                <img alt="Logo" src="assets/media/images/ScribeBill(5).png" class="h-30px" />
               </a>
               <!--end::Logo image-->
             </div>
@@ -197,7 +197,7 @@
     <!--begin::Javascript-->
     <%- include('partials/toast') %>
       <%- include('partials/mainScript') %>
-      <script id="itemRowTemplate" type="text/template">
+        <script id="itemRowTemplate" type="text/template">
             <div class="row mb-3 item-row">
               <div class="col-md-4">
                 <input type="text" class="form-control" name="description" placeholder="Description" required />
@@ -214,28 +214,28 @@
             </div>
           </script>
 
-          <div class="mt-4">
-  <div class="row">
-    <div class="col-md-4">
-      <div class="d-flex justify-content-between">
-        <span class="fw-semibold">Subtotal:</span>
-        <span id="subtotalDisplay">$0.00</span>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="d-flex justify-content-between">
-        <span class="fw-semibold">Tax (<span id="taxRateDisplay">0</span>%):</span>
-        <span id="taxAmountDisplay">$0.00</span>
-      </div>
-    </div>
-    <div class="col-md-4">
-      <div class="d-flex justify-content-between fw-bold fs-6 text-dark">
-        <span>Total:</span>
-        <span id="totalDisplay">$0.00</span>
-      </div>
-    </div>
-  </div>
-</div>
+        <div class="mt-4">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="d-flex justify-content-between">
+                <span class="fw-semibold">Subtotal:</span>
+                <span id="subtotalDisplay">$0.00</span>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="d-flex justify-content-between">
+                <span class="fw-semibold">Tax (<span id="taxRateDisplay">0</span>%):</span>
+                <span id="taxAmountDisplay">$0.00</span>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="d-flex justify-content-between fw-bold fs-6 text-dark">
+                <span>Total:</span>
+                <span id="totalDisplay">$0.00</span>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <!--end::Javascript-->
   </body>
