--- a/frontend/views/invoiceInfo.ejs
+++ b/frontend/views/invoiceInfo.ejs
@@ -29,7 +29,7 @@
               </div>
               <!--begin::Logo image-->
               <a href="index.html">
-                <img alt="Logo" src="assets/media/logos/demo42-small.svg" class="h-30px" />
+                <img alt="Logo" src="assets/media/images/ScribeBill(5).png" class="h-30px" />
               </a>
               <!--end::Logo image-->
             </div>
@@ -104,101 +104,118 @@
                       <section class="d-flex flex-wrap justify-content-md-end gap-2">
                         <div class="btn btn-light" id="print-invoice">Print</div>
                         <div class="btn btn-light" id="download-invoice">Download</div>
-                        <div class="btn btn-light">Send</div>
-                        <div class="btn btn-light">...</div>
+                        <div class="btn btn-light" id="sendInvoiceBtn">Send</div>
+                        <div class="dropdown">
+                          <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Actions
+                          </button>
+                          <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" id="updateInvoice">Update Invoice</a></li>
+                            <li><a class="dropdown-item" id="deleteInvoiceBtn">Delete Invoice</a></li>
+                            <li><a class="dropdown-item" id="markAsPaidBtn">Mark As Paid</a></li>
+                          </ul>
+                        </div>
                       </section>
                     </div>
 
+                    <div class="row justify-content-center mt-7">
+                      <div class="col-12 col-lg-10 col-xxl-9">
 
-                    <div class="card p-7 mt-7 shadow" id="invoice-card">
+                        <div class="card p-7 mt-7 shadow" id="invoice-card" style="max-width: 900px;">
 
-                      <div class="d-flex align-items-center justify-content-between">
-                        <section>
-                          <h1 class="">Invoice Details</h1>
-                          <div class="small text-muted">Status: <span id="invoice-status" class="badge"></span>
+                          <div class="d-flex align-items-center justify-content-between">
+                            <section>
+                              <h1 class="">Invoice Details</h1>
+                              <div class="small text-muted">Status: <span id="invoice-status" class="badge"></span>
+                              </div>
+                            </section>
+                            <section class="d-flex align-items-center justify-content-end gap-2">
+                              <img src="" id="account-logo" class="w-auto h-100 object-fit-contain"
+                                style="max-width: 50px;" height="100" alt="">
+                              <h1 id="account-name"></h1>
+                            </section>
                           </div>
-                        </section>
-                        <section class="d-flex align-items-center justify-content-end gap-2">
-                          <img src="" id="account-logo" class="w-auto h-100 object-fit-contain"
-                            style="max-width: 50px;" height="100" alt="">
-                          <h1 id="account-name"></h1>
-                        </section>
-                      </div>
 
 
-                      <div class="d-flex align-items-cd-flex align-items-center justify-content-betweenenter justify-content-between mt-4">
+                          <div class="d-flex align-items-center justify-content-between mt-4">
 
-                        <section>
-                          <div class="text-muted small mb-2">Bill To:</div>
-                          <div class="fw-bold fs-5 my-1" id="client-company"></div>
-                          <div class="fs-5 my-1" id="client-name"></div>
-                          <div class="fs-5 my-1" id="client-address"></div>
-                          <div class="fs-5 my-1" id="client-email"></div>
-                        </section>
 
-                        <section>
-                          <div class="text-muted small mb-1">Invoice Number:</div>
-                          <div class="fs-5 my-1 invoice-number"></div>
-                          <div class="text-muted small my-1">Issue Date:</div>
-                          <div class="fs-5 my-1" id="invoice-date"></div>
-                          <div class="text-muted small my-1">Due Date:</div>
-                          <div class="fs-5 my-1" id="invoice-due"></div>
-                        </section>
-                      </div>
+                            <section>
+                              <div class="text-muted small mb-2">Bill To:</div>
+                              <div class="fw-bold fs-5 my-1" id="client-company"></div>
+                              <div class="fs-5 my-1" id="client-name"></div>
+                              <div class="fs-5 my-1" id="client-address"></div>
+                              <div class="fs-5 my-1" id="client-email"></div>
+                            </section>
 
-                      <hr>
+                            <section>
+                              <div class="text-muted small mb-1">Invoice Number:</div>
+                              <div class="fs-5 my-1 invoice-number"></div>
+                              <div class="text-muted small my-1">Issue Date:</div>
+                              <div class="fs-5 my-1" id="invoice-date"></div>
+                              <div class="text-muted small my-1">Due Date:</div>
+                              <div class="fs-5 my-1" id="invoice-due"></div>
+                            </section>
+                          </div>
 
-                      <h3 class="my-3">Invoice Items</h3>
+                          <hr>
 
-                      <div class="table-responsive">
-                        <table class="table table-hover table-rounded table-striped border gy-7 gs-7">
-                          <thead>
-                            <tr class="fw-semibold fs-6 text-gray-800 border-bottom-2 border-gray-200">
-                              <th>Description</th>
-                              <th>Quantity</th>
-                              <th>Rate</th>
-                              <th>Amount</th>
-                            </tr>
-                          </thead>
-                          <tbody id="invoice-items-body">
-                            <!-- JS will inject rows here -->
-                          </tbody>
-                        </table>
-                      </div>
+                          <h3 class="my-3">Invoice Items</h3>
 
-                      <div class="d-flex flex-column align-items-end justify-content-end mt-4 ">
-                        <div class="d-flex align-items-center justify-content-between gap-5 mt-4">
-                          <div class="fs-5 text-muted">Subtotal:</div>
-                          <div class="fs-5" id="invoice-subtotal"></div>
+                          <div class="table-responsive">
+                            <table class="table table-hover table-rounded table-striped border gy-7 gs-7">
+                              <thead>
+                                <tr class="fw-semibold fs-6 text-gray-800 border-bottom-2 border-gray-200">
+                                  <th>Description</th>
+                                  <th>Quantity</th>
+                                  <th>Rate</th>
+                                  <th>Amount</th>
+                                </tr>
+                              </thead>
+                              <tbody id="invoice-items-body">
+                                <!-- JS will inject rows here -->
+                              </tbody>
+                            </table>
+                          </div>
+
+                          <div class="d-flex flex-column align-items-end justify-content-end mt-4 ">
+                            <div class="d-flex align-items-center justify-content-between gap-5 mt-4">
+                              <div class="fs-5 text-muted">Subtotal:</div>
+                              <div class="fs-5" id="invoice-subtotal"></div>
+                            </div>
+                            <div class="d-flex align-items-center justify-content-between gap-5 mt-4">
+                              <div class="fs-5 text-muted">Tax:</div>
+                              <div class="fs-5" id="invoice-tax"></div>
+                            </div>
+                            <hr style="width: 150px">
+                            <div class="d-flex align-items-center justify-content-between gap-5">
+                              <div class="fs-5 text-muted">Total:</div>
+                              <div class="fs-5" id="invoice-total"></div>
+                            </div>
+                            <hr style="width: 150px">
+                            <div class="d-flex align-items-center justify-content-between gap-5">
+                              <div class="fs-5 text-success" id="invoice-paid-date"></div>
+                              <div class="fs-5 text-success" id="invoice-paid"></div>
+                            </div>
+                          </div>
+
+                          <hr>
+
+                          <h2>Notes</h2>
+                          <p class="text-muted" id="invoice-notes">Payment due within 30 days. Please make checks
+                            payable to
+                            InvoiceHub Inc.</p>
+
+                          <hr>
+
+                          <p class="text-muted">Thank you for your business. If you have any questions, please contact
+                            us.
+                          </p>
+
+
                         </div>
-                        <div class="d-flex align-items-center justify-content-between gap-5 mt-4">
-                          <div class="fs-5 text-muted">Tax:</div>
-                          <div class="fs-5" id="invoice-tax"></div>
-                        </div>
-                        <hr style="width: 150px">
-                        <div class="d-flex align-items-center justify-content-between gap-5">
-                          <div class="fs-5 text-muted">Total:</div>
-                          <div class="fs-5" id="invoice-total"></div>
-                        </div>
-                        <hr style="width: 150px">
-                        <div class="d-flex align-items-center justify-content-between gap-5">
-                          <div class="fs-5 text-success" id="invoice-paid-date"></div>
-                          <div class="fs-5 text-success" id="invoice-paid"></div>
-                        </div>
                       </div>
-
-                      <hr>
-
-                      <h2>Notes</h2>
-                      <p class="text-muted" id="invoice-notes">Payment due within 30 days. Please make checks payable to
-                        InvoiceHub Inc.</p>
-
-                      <hr>
-
-                      <p class="text-muted">Thank you for your business. If you have any questions, please contact us.
-                      </p>
-
-
                     </div>
 
                     <!--end::Content container-->
