--- a/frontend/views/partials/authHead.ejs
+++ b/frontend/views/partials/authHead.ejs
@@ -1,23 +1,27 @@
 <head>
-  <base href="../../../" />
-  <title>Metronic - The World's #1 Selling Tailwind CSS & Bootstrap Admin Template by KeenThemes</title>
+  <base href="../" />
+  <title>
+    <%=title%>
+  </title>
   <meta charset="utf-8" />
   <meta name="description"
-    content="The most advanced Tailwind CSS & Bootstrap 5 Admin Theme with 40 unique prebuilt layouts on Themeforest trusted by 100,000 beginners and professionals. Multi-demo, Dark Mode, RTL support and complete React, Angular, Vue, Asp.Net Core, Rails, Spring, Blazor, Django, Express.js, Node.js, Flask, Symfony & Laravel versions. Grab your copy now and get life-time updates for free." />
+    content="Manage your invoices, clients, and payments effortlessly with our modern invoicing dashboard. Fast, secure, and easy to use—perfect for freelancers, small businesses, and agencies." />
   <meta name="keywords"
-    content="tailwind, tailwindcss, metronic, bootstrap, bootstrap 5, angular, VueJs, React, Asp.Net Core, Rails, Spring, Blazor, Django, Express.js, Node.js, Flask, Symfony & Laravel starter kits, admin themes, web design, figma, web development, free templates, free admin themes, bootstrap theme, bootstrap template, bootstrap dashboard, bootstrap dak mode, bootstrap button, bootstrap datepicker, bootstrap timepicker, fullcalendar, datatables, flaticon" />
+    content="invoice app, invoice dashboard, billing software, small business invoicing, invoice tracker, payment management, client invoicing, freelance tools, invoice generator" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta property="og:locale" content="en_US" />
-  <meta property="og:type" content="article" />
-  <meta property="og:title"
-    content="Metronic - The World's #1 Selling Tailwind CSS & Bootstrap Admin Template by KeenThemes" />
-  <meta property="og:url" content="https://keenthemes.com/metronic" />
-  <meta property="og:site_name" content="Metronic by Keenthemes" />
-  <link rel="canonical" href="http://preview.keenthemes.comauthentication/layouts/overlay/sign-in.html" />
-  <link rel="shortcut icon" href="/assets/media/logos/favicon.ico" />
+  <meta property="og:title" content="Smart Invoicing Dashboard–Simplify Billing & Get Paid Faster" />
+  <meta property="og:description"
+    content="Streamline your invoicing and client payments with a clean, professional dashboard. Send invoices, track due dates, and manage taxes—all in one place." />
+  <meta property="og:url" content="https://scribebill.com" />
+  <meta property="og:site_name" content="ScribeBill" />
+  <link rel="shortcut icon" href="/assets/media/images/ScribeBill(5).png" />
   <!--begin::Fonts(mandatory for all pages)-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Geist:300,400,500,600,700" />
   <!--end::Fonts-->
+  <!--begin::Vendor Stylesheets(used for this page only)-->
+  <link href="/assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
+  <link href="/assets/plugins/custom/vis-timeline/vis-timeline.bundle.css" rel="stylesheet" type="text/css" />
+  <!--end::Vendor Stylesheets-->
   <!--begin::Global Stylesheets Bundle(mandatory for all pages)-->
   <link href="/assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
   <link href="/assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
