--- a/frontend/views/settings.ejs
+++ b/frontend/views/settings.ejs
@@ -31,7 +31,7 @@
               </div>
               <!--begin::Logo image-->
               <a href="index.html">
-                <img alt="Logo" src="assets/media/logos/demo42-small.svg" class="h-30px" />
+                <img alt="Logo" src="assets/media/images/ScribeBill(5).png" class="h-30px" />
               </a>
               <!--end::Logo image-->
             </div>
@@ -198,8 +198,8 @@
                             </label>
                             <section class="d-flex align-items-center justify-content-end gap-2">
                               <!-- This is for previewing the logo -->
-                              <img src="" id="accountLogoPreview" class="w-auto h-100 object-fit-contain" style="max-width: 50px;" height="100"
-                                alt="Logo Preview">
+                              <img src="" id="accountLogoPreview" class="w-auto h-100 object-fit-contain"
+                                style="max-width: 50px;" height="100" alt="Logo Preview">
 
                               <!-- This is for selecting the file -->
                               <input type="file" class="form-control" id="accountLogoInput" accept="image/*">
@@ -208,7 +208,8 @@
 
 
                           <div class="d-flex justify-content-end align-items-center">
-                            <button type="button" class="btn btn-primary mt-3" id="updateAccountSettings">Save Changes</button>
+                            <button type="button" class="btn btn-primary mt-3" id="updateAccountSettings">Save
+                              Changes</button>
                           </div>
                         </div>
 
@@ -240,7 +241,8 @@
 
 
                           <div class="d-flex justify-content-end align-items-center">
-                            <button type="button" id="updateAccountInvoiceSettings" class="btn btn-primary mt-3">Save Changes</button>
+                            <button type="button" id="updateAccountInvoiceSettings" class="btn btn-primary mt-3">Save
+                              Changes</button>
                           </div>
                         </div>
                       </div>
