--- a/frontend/views/dashboard.ejs
+++ b/frontend/views/dashboard.ejs
@@ -3,7 +3,7 @@
 <html lang="en">
 <!--begin::Head-->
 <%- include('partials/mainHead')%>
-<script type="module" src="/assets/js/dashboard.js"></script>
+  <script type="module" src="/assets/js/dashboard.js"></script>
 
   <!--end::Head-->
   <!--begin::Body-->
@@ -30,7 +30,7 @@
               </div>
               <!--begin::Logo image-->
               <a href="index.html">
-                <img alt="Logo" src="assets/media/logos/demo42-small.svg" class="h-30px" />
+                <img alt="Logo" src="assets/media/images/ScribeBill(5).png" class="h-30px" />
               </a>
               <!--end::Logo image-->
             </div>
@@ -86,7 +86,8 @@
                       <!--begin::Actions-->
                       <div class="d-flex align-items-center gap-2 gap-lg-3">
                         <a href="/clients/create"
-                          class="btn btn-flex btn-outline btn-color-gray-700 btn-active-color-primary bg-body h-40px fs-7 fw-bold">Add Client</a>
+                          class="btn btn-flex btn-outline btn-color-gray-700 btn-active-color-primary bg-body h-40px fs-7 fw-bold">Add
+                          Client</a>
                         <a href="/invoices/create" class="btn btn-flex btn-primary h-40px fs-7 fw-bold">New Invoice</a>
                       </div>
                       <!--end::Actions-->
@@ -107,7 +108,7 @@
                           <div class="card-header">
                             <h3 class="card-title">Total Invoices</h3>
                             <div class="card-toolbar">
-                            <i class="las la-file-alt fs-1"></i>
+                              <i class="las la-file-alt fs-1"></i>
                             </div>
                           </div>
                           <div class="card-body py-5">
@@ -116,33 +117,33 @@
                         </div>
                       </div>
 
-                    <div class="col-12 my-3 my-md-0 my-lg-0  col-md-4 col-lg-4">
-                      <div class="card card-flush shadow-sm">
-                        <div class="card-header">
-                          <h3 class="card-title">Total Revenue</h3>
-                          <div class="card-toolbar">
-                            <i class="las la-dollar-sign fs-1"></i>
+                      <div class="col-12 my-3 my-md-0 my-lg-0  col-md-4 col-lg-4">
+                        <div class="card card-flush shadow-sm">
+                          <div class="card-header">
+                            <h3 class="card-title">Total Revenue</h3>
+                            <div class="card-toolbar">
+                              <i class="las la-dollar-sign fs-1"></i>
+                            </div>
+                          </div>
+                          <div class="card-body py-5">
+                            <h1>GHS <span id="totalRevenueStat">...</span></h1>
                           </div>
                         </div>
-                        <div class="card-body py-5">
-                          <h1>GHS <span id="totalRevenueStat">...</span></h1>
-                        </div>
                       </div>
-                    </div>
 
-                    <div class="col-12 my-3 my-md-0 my-lg-0  col-md-4 col-lg-4">
-                      <div class="card card-flush shadow-sm">
-                        <div class="card-header">
-                          <h3 class="card-title">Pending Payments</h3>
-                          <div class="card-toolbar">
-                            <i class="las la-dollar-sign fs-1"></i>
+                      <div class="col-12 my-3 my-md-0 my-lg-0  col-md-4 col-lg-4">
+                        <div class="card card-flush shadow-sm">
+                          <div class="card-header">
+                            <h3 class="card-title">Pending Payments</h3>
+                            <div class="card-toolbar">
+                              <i class="las la-dollar-sign fs-1"></i>
+                            </div>
+                          </div>
+                          <div class="card-body py-5">
+                            <h1>GHS <span id="pendingPaymentsStat">...</span></h1>
                           </div>
                         </div>
-                        <div class="card-body py-5">
-                          <h1>GHS <span id="pendingPaymentsStat">...</span></h1>
-                        </div>
                       </div>
-                    </div>
 
                     </div>
 
@@ -195,8 +196,8 @@
                         <h2 class="page-heading">Recent Invoices</h2>
                         <div class="btn btn-primary">
                           <a href="/invoices" class="text-white">View All</a>
-                          </div>
                         </div>
+                      </div>
 
                       <div class="table-responsive">
                         <table class="table table-hover table-rounded table-striped border gy-7 gs-7">
@@ -261,14 +262,12 @@
     <!--end::Scrolltop-->
 
     <!--begin::Javascript-->
-          <%- include('partials/toast') %>
-    <%- include('partials/mainScript') %>
-      <!--end::Javascript-->
+    <%- include('partials/toast') %>
+      <%- include('partials/mainScript') %>
+        <!--end::Javascript-->
   </body>
   <!--end::Body-->
 
 
 
 </html>
-
-
