--- a/frontend/views/invoices.ejs
+++ b/frontend/views/invoices.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <!--begin::Head-->
 <%- include('partials/mainHead')%>
-<script type="module" src="/assets/js/invoices.js"></script>
+  <script type="module" src="/assets/js/invoices.js"></script>
 
   <!--end::Head-->
   <!--begin::Body-->
@@ -29,7 +29,7 @@
               </div>
               <!--begin::Logo image-->
               <a href="index.html">
-                <img alt="Logo" src="assets/media/logos/demo42-small.svg" class="h-30px" />
+                <img alt="Logo" src="assets/media/images/ScribeBill(5).png" class="h-30px" />
               </a>
               <!--end::Logo image-->
             </div>
@@ -85,7 +85,8 @@
                       <!--begin::Actions-->
                       <div class="d-flex align-items-center gap-2 gap-lg-3">
 
-                        <a href="/invoices/create" class="btn btn-flex btn-primary h-40px fs-7 fw-bold"><i class="las la-plus-circle fs-1"></i>Create Invoice
+                        <a href="/invoices/create" class="btn btn-flex btn-primary h-40px fs-7 fw-bold"><i
+                            class="las la-plus-circle fs-1"></i>Create Invoice
                         </a>
                       </div>
                       <!--end::Actions-->
@@ -103,7 +104,8 @@
 
                     <div class="row">
                       <div class="table-responsive">
-                        <table id="invoicesTable" class="table table-hover table-rounded table-striped border gy-7 gs-7">
+                        <table id="invoicesTable"
+                          class="table table-hover table-rounded table-striped border gy-7 gs-7">
                           <thead>
                             <tr class="fw-semibold fs-6 text-gray-800 border-bottom-2 border-gray-200">
                               <th>Invoice #</th>
@@ -141,9 +143,9 @@
     <!--end::Scrolltop-->
 
     <!--begin::Javascript-->
-        <%- include('partials/toast') %>
-    <%- include('partials/mainScript') %>
-      <!--end::Javascript-->
+    <%- include('partials/toast') %>
+      <%- include('partials/mainScript') %>
+        <!--end::Javascript-->
   </body>
   <!--end::Body-->
 
