--- a/frontend/views/login.ejs
+++ b/frontend/views/login.ejs
@@ -37,15 +37,10 @@
               src="/assets/media/auth/agency-dark.png" alt="" />
             <!--end::Image-->
             <!--begin::Title-->
-            <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">Fast, Efficient and Productive</h1>
+            <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">Fast. Reliable. Hassle-Free Invoicing.</h1>
             <!--end::Title-->
             <!--begin::Text-->
-            <div class="text-gray-600 fs-base text-center fw-semibold">In this kind of post,
-              <a href="#" class="opacity-75-hover text-primary me-1">the blogger</a>introduces a person they’ve
-              interviewed
-              <br />and provides some background information about
-              <a href="#" class="opacity-75-hover text-primary me-1">the interviewee</a>and their
-              <br />work following this is a transcript of the interview.
+            <div class="text-gray-600 fs-base text-center fw-semibold">Join thousands of professionals who trust us to handle their billing.
             </div>
             <!--end::Text-->
           </div>
@@ -65,6 +60,9 @@
                   action="#!">
                   <!--begin::Heading-->
                   <div class="text-center mb-11">
+                    <div class="symbol symbol-50px me-5 mb-4">
+                      <img src="/assets/media/images/ScribeBill.png" alt="image" style="width: 70px; height: 70px; object-fit: contain;" />
+                    </div>
                     <!--begin::Title-->
                     <h1 class="text-gray-900 fw-bolder mb-3">Sign In</h1>
                     <!--end::Title-->
