--- a/frontend/views/register.ejs
+++ b/frontend/views/register.ejs
@@ -37,15 +37,10 @@
               src="/assets/media/auth/agency-dark.png" alt="" />
             <!--end::Image-->
             <!--begin::Title-->
-            <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">Fast, Efficient and Productive</h1>
+            <h1 class="text-gray-800 fs-2qx fw-bold text-center mb-7">Fast. Reliable. Hassle-Free Invoicing.</h1>
             <!--end::Title-->
             <!--begin::Text-->
-            <div class="text-gray-600 fs-base text-center fw-semibold">In this kind of post,
-              <a href="#" class="opacity-75-hover text-primary me-1">the blogger</a>introduces a person they've
-              interviewed
-              <br />and provides some background information about
-              <a href="#" class="opacity-75-hover text-primary me-1">the interviewee</a>and their
-              <br />work following this is a transcript of the interview.
+            <div class="text-gray-600 fs-base text-center fw-semibold">Join thousands of professionals who trust us to handle their billing.
             </div>
             <!--end::Text-->
           </div>
@@ -64,6 +59,9 @@
                 <form class="form w-100" id="registerForm" action="#!">
                   <!--begin::Heading-->
                   <div class="text-center mb-11">
+                    <div class="symbol symbol-50px me-5 mb-4">
+                      <img src="/assets/media/images/ScribeBill.png" alt="image" style="width: 70px; height: 70px; object-fit: contain;" />
+                    </div>
                     <!--begin::Title-->
                     <h1 class="text-gray-900 fw-bolder mb-3">Sign Up</h1>
                     <!--end::Title-->
@@ -175,7 +173,7 @@
                   <!--end::Submit button-->
                   <!--begin::Sign up-->
                   <div class="text-gray-500 text-center fw-semibold fs-6">Already have an Account?
-                    <a href="#!" class="link-primary fw-semibold">Sign in</a>
+                    <a href="/login" class="link-primary fw-semibold">Sign in</a>
                   </div>
                   <!--end::Sign up-->
                 </form>
@@ -193,7 +191,7 @@
       <!--end::Authentication - Sign-up-->
     </div>
     <!--end::Root-->
-    < !--begin:: Javascript-->
+    <!--begin:: Javascript-->
       <%- include('partials/toast') %>
         <%- include('partials/authScript') %>
           < !--end:: Javascript-->
